force-app/main/default/objects/recTypesDDApproval__c/recTypesDDApproval__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Record Types - DD Approval</label>
</CustomObject>