force-app/main/default/objects/recTypesDDApproval__c/fields/DD_Approval_Completed__c.field-meta.xml
<CustomField>
    <fullName>DD_Approval_Completed__c</fullName>
    <label>DD Approval Completed</label>
    <length>18</length>
    <type>Text</type>
</CustomField>