force-app/main/default/objects/recTypesDDApproval__c/fields/DD_Awaiting_Approval__c.field-meta.xml
<CustomField>
    <fullName>DD_Awaiting_Approval__c</fullName>
    <label>DD Awaiting Approval</label>
    <length>18</length>
    <type>Text</type>
</CustomField>