force-app/main/default/objects/recTypesDDApproval__c/fields/New_DD_Approval__c.field-meta.xml
<CustomField>
    <fullName>New_DD_Approval__c</fullName>
    <label>New DD Approval</label>
    <length>18</length>
    <type>Text</type>
</CustomField>